# inktvis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/inktvis/: assembler.py  cli.py  cost_estimator.py  header_stripper.py  ocr_cloud.py  ocr_local.py  preprocessor.py  structure_parser.py
tests/: test_header_stripper.py  test_structure_parser.py
